k3s/ingress/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: mardan-smart-city
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
  - hosts:
    - mardan.local
    secretName: mardan-tls
  rules:
  - host: mardan.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: mardan-backend
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
